# bsi_hello

./: .gitattributes  .gitignore  README.md  README.md.tmp  consul_config.hex  consul_config.yaml  pyproject.toml
app/: main.py
app/api/: router_user.py
app/containers/: __init__.py  api_container.py  application_container.py  data_access_container.py  grpc_container.py  root_container.py  service_container.py
app/core/: order_service.py  product_service.py  user_service.py
app/core/interfaces/: __init__.py  order_service_interface.py  product_service_interface.py  user_service_interface.py
app/db/: models.py  session.py
app/db/migrations/: env.py
app/grpc_api/: server.py
app/grpc_api/proto/: order.proto  product.proto  user.proto
app/grpc_api/server/: __init__.py  order_service_grpc.py  product_service_grpc.py
app/internal/client/: __init__.py  multi_service_grpc_client.py  user_service_client.py  (+1 more)
doc/: ADDING_GRPC_SERVICE_GUIDE.md  ADDING_HTTP_SERVICE_GUIDE.md  DYNAMIC_SERVICE_DISCOVERY_EXPLAINED.md  IMPROVED_GRPC_SERVICE_REGISTRATION.md  LOGGING_README.md
scripts/: compile_proto.sh  init_alembic.py  init_consul_config.py  run_migrations.bat  run_migrations.sh  start_app.py
tests/: common.py  test_1_config_initialization.py  test_2_consul_registry.py  test_3_database_redis_initialization.py  test_4_dependency_injection.py  test_5_http_service.py  test_6_grpc_service.py  test_7_multi_service_grpc_client.py  test_check_alembic.py  test_deregister_param.py  test_exception_logging.py  test_grpc_reflection.py  test_services.py  test_sql_logging.py
(+18 files in other folders)
